tinyml/tests/snapshots/corpus_tests__c0006_variant_record__emit_native.snap
---
source: target/debug/build/tinyml-3635f5e80bf3d5dc/out/corpus_tests_generated.rs
expression: "emit_native_snapshot(\"tests/fixtures/0006_variant_record.ml\")"
---
emit pending
Module {
    values: [],
}
