tinyml/tests/snapshots/corpus_tests__c0006_variant_record__lex.snap
---
source: tinyml/tests/corpus_tests.rs
expression: "lex_snapshot(\"tests/fixtures/0006_variant_record.ml\")"
---
[
    Token {
        kind: Type,
        span: Span {
            start: 0,
            end: 4,
        },
    },
    Token {
        kind: Ident(
            "msg",
        ),
        span: Span {
            start: 5,
            end: 8,
        },
    },
    Token {
        kind: LAngle,
        span: Span {
            start: 8,
            end: 9,
        },
    },
    Token {
        kind: TypeVar(
            "a",
        ),
        span: Span {
            start: 9,
            end: 11,
        },
    },
    Token {
        kind: RAngle,
        span: Span {
            start: 11,
            end: 12,
        },
    },
    Token {
        kind: Equal,
        span: Span {
            start: 13,
            end: 14,
        },
    },
    Token {
        kind: Pipe,
        span: Span {
            start: 17,
            end: 18,
        },
    },
    Token {
        kind: Constructor(
            "Ping",
        ),
        span: Span {
            start: 19,
            end: 23,
        },
    },
    Token {
        kind: Pipe,
        span: Span {
            start: 26,
            end: 27,
        },
    },
    Token {
        kind: Constructor(
            "User",
        ),
        span: Span {
            start: 28,
            end: 32,
        },
    },
    Token {
        kind: LBrace,
        span: Span {
            start: 33,
            end: 34,
        },
    },
    Token {
        kind: Ident(
            "name",
        ),
        span: Span {
            start: 35,
            end: 39,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 39,
            end: 40,
        },
    },
    Token {
        kind: Ident(
            "string",
        ),
        span: Span {
            start: 41,
            end: 47,
        },
    },
    Token {
        kind: Comma,
        span: Span {
            start: 47,
            end: 48,
        },
    },
    Token {
        kind: Ident(
            "value",
        ),
        span: Span {
            start: 49,
            end: 54,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 54,
            end: 55,
        },
    },
    Token {
        kind: TypeVar(
            "a",
        ),
        span: Span {
            start: 56,
            end: 58,
        },
    },
    Token {
        kind: RBrace,
        span: Span {
            start: 59,
            end: 60,
        },
    },
    Token {
        kind: Eof,
        span: Span {
            start: 61,
            end: 61,
        },
    },
]
