tinyml/tests/snapshots/corpus_tests__c0006_variant_record__lower.snap
---
source: target/debug/build/tinyml-3635f5e80bf3d5dc/out/corpus_tests_generated.rs
expression: "lower_snapshot(\"tests/fixtures/0006_variant_record.ml\")"
---
Module {
    values: [],
}
